Fix vertical align in nav utils

--- a/themes/frontierline/sass/components/navigation/_nav-util.scss
+++ b/themes/frontierline/sass/components/navigation/_nav-util.scss
@@ -14,6 +14,7 @@
     .content {
         @include flexbox;
         padding: .5em 20px;
+        align-items: center;
     }
 
     li {
@@ -101,6 +102,8 @@
 
     p {
         margin: 0;
+        display: flex;
+        align-items: center;
     }
 
     label {
